--- a/clone-twitter/styles.css
+++ b/clone-twitter/styles.css
@@ -102,7 +102,138 @@ header#main-header div.side button {
 }
 
 div.banner {
-    height: 380px;
+    height: 300px;
     width: 100%;
     background: #21a9f5;
+}
+
+div.bar {
+    height: 59px;
+    background: #FFF;
+    box-shadow: 0 1px 3px rgba(0,0,0, 0.25);
+}
+
+div.bar .content{
+    display: flex;
+    justify-content: space-between;
+    padding-left: 285px;
+    height: 100%;
+}
+
+div.bar .content ul{
+    display: flex;
+    list-style: none;
+    height: 100%;
+}
+
+div.bar .content ul li {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 15px;
+    position: relative;
+}
+
+div.bar .content ul li.active::after {
+    content: "";
+    width: 100%;
+    height: 3px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: #21a9f5;
+}
+
+div.bar .content ul li span{
+    color: #667580;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+div.bar .content ul li strong{
+    color: #21a9f5;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 2px;
+}
+
+div.bar .content .actions button{
+    height: 34px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 90px;
+    font-weight: bold;
+    font-size: 14px;
+    color: #21a9f5;
+    border: 1px solid #21a9f5;
+    border-radius: 5px;
+    background: #FFF;
+
+    margin-right: 20px;
+}
+
+div.bar .content .actions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+div.wrapper-content {
+    display: flex;
+}
+
+div.wrapper-content aside.profile {
+    width: 260px;
+
+}
+
+div.wrapper-content aside.profile img.avatar {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 5px solid #FFF;
+    margin-top: -130px;
+}
+
+div.wrapper-content aside.profile h1 {
+    font-size: 21px;
+    color: #1F2226;
+    margin-top: 10px;
+}
+
+div.wrapper-content aside.profile span {
+    font-size: 14px;
+    color: #53626C;
+}
+
+div.wrapper-content aside.profile p {
+    font-size: 14px;
+    margin-top: 15px;
+    color: #1F2226;
+}
+
+div.wrapper-content aside.profile ul {
+    margin-top: 20px;
+    list-style: none;
+}
+
+div.wrapper-content aside.profile li {
+    font-size: 14px;
+    color: #657786;
+
+    display: flex;
+    align-items: center;
+    margin-top: 5px;
+}
+
+div.wrapper-content aside.profile li:first-child {
+    margin: 0;
+}
+
+div.wrapper-content aside.profile img {
+    margin-right: 10px;
 }
