--- a/clone-twitter/styles.css
+++ b/clone-twitter/styles.css
@@ -102,7 +102,7 @@ header#main-header div.side button {
 }
 
 div.banner {
-    height: 300px;
+    height: 200px;
     width: 100%;
     background: #21a9f5;
 }
@@ -221,7 +221,7 @@ div.wrapper-content aside.profile ul {
     list-style: none;
 }
 
-div.wrapper-content aside.profile li {
+div.wrapper-content aside.profile ul.list li {
     font-size: 14px;
     color: #657786;
 
@@ -230,10 +230,206 @@ div.wrapper-content aside.profile li {
     margin-top: 5px;
 }
 
-div.wrapper-content aside.profile li:first-child {
+div.wrapper-content aside.profile ul.list li:first-child {
     margin: 0;
 }
 
-div.wrapper-content aside.profile img {
+div.wrapper-content aside.profile ul.list li img {
     margin-right: 10px;
+}
+
+div.wrapper-content aside.profile .widget {
+    margin-top: 20px;
+}
+
+div.wrapper-content aside.profile .widget strong {
+    font-weight: normal;
+    color: #21a9f5;
+    font-size: 14px;
+    
+    display: flex;
+    align-items: center;
+}
+
+div.wrapper-content aside.profile .widget strong img {
+    margin-right: 5px;
+}
+
+div.wrapper-content aside.profile .followers ul {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+div.wrapper-content aside.profile .followers ul li {
+    width: 45px;
+    height: 45px;
+    background: #D0D5D9;
+    border-radius: 50%;
+    flex-shrink: 0;
+    flex-grow: 1;
+    margin-right: 5px;
+    margin: 0 5px 10px 0;
+}
+
+div.wrapper-content aside.profile .images ul {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+div.wrapper-content aside.profile .images ul li {
+    width: 80px;
+    height: 80px;
+    background: #D0D5D9;
+    border-radius: 8px;
+    flex-shrink: 0;
+    flex-grow: 1;
+    margin-right: 5px;
+    margin: 0 5px 10px 0;
+}
+
+div.wrapper-content .timeline {
+    flex: 1;
+    background: #FFF;
+    margin: 10px 20px;
+}
+
+div.wrapper-content .timeline nav {
+    border-bottom: 1px solid #E6ECF0;
+    padding: 10px 15px;
+}
+
+div.wrapper-content .timeline a {
+    text-decoration: none;
+    color: #21a9f5;
+    font-size: 18px;
+    font-weight: bold;
+    margin-left: 20px;
+}
+
+div.wrapper-content .timeline a:first-child {
+    margin: 0px;
+}
+
+div.wrapper-content .timeline a.active {
+    color: #1F2226;
+}
+
+
+
+
+
+
+
+
+
+div.wrapper-content aside.widgets {
+    width: 290px;
+    margin-top: 10px;
+}
+
+div.wrapper-content aside.widgets .widget {
+    background: #FFF;
+    padding: 15px;
+}
+
+div.wrapper-content aside.widgets .widget .title {
+    display: flex;
+    align-items: baseline;
+}
+
+div.wrapper-content aside.widgets .widget .title strong {
+    font-size: 18px;
+    color: #1F2226;
+}
+
+div.wrapper-content aside.widgets .widget .title a {
+    color: #21a9f5;
+    font-size: 12px;
+    text-decoration: none;
+    position: relative;
+    padding-left: 10px;
+}
+
+div.wrapper-content aside.widgets .widget .title a::before {
+    content: '';
+    width: 2px;
+    height: 2px;
+    border-radius: 50%;
+    margin-left: 5px;
+    margin-right: 5px;
+    background-color: #000;
+    position: absolute;
+    left: 0;
+    top: 6px;
+}
+
+div.wrapper-content aside.widgets .follow ul{
+    list-style: none;
+    margin-top: 10px;
+}
+
+div.wrapper-content aside.widgets .follow ul li {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccd6dd;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+div.wrapper-content aside.widgets .follow ul li:last-child {
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border: 0;
+}
+
+div.wrapper-content aside.widgets .follow ul li .profile {
+    display: flex;
+    align-items: center;
+}
+
+div.wrapper-content aside.widgets .follow ul li .profile img {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+}
+
+div.wrapper-content aside.widgets .follow ul li .profile .info {
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+div.wrapper-content aside.widgets .follow ul li .profile .info strong {
+    font-size: 14px;
+    color: #1F2226;
+}
+
+div.wrapper-content aside.widgets .follow ul li .profile .info span {
+    font-weight: normal;
+    color: #9a9a9a;
+}
+
+div.wrapper-content aside.widgets .follow ul li .profile .info button {
+    height: 27px;
+    margin-top: 4px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 90px;
+    font-weight: bold;
+    font-size: 14px;
+    color: #21a9f5;
+    border: 1px solid #21a9f5;
+    border-radius: 5px;
+    background: #FFF;
+}
+
+div.wrapper-content aside.widgets .follow ul li > a {
+    color: #CCD6DD;
+    text-decoration: none;
+    font-size: 14px;
 }
